[gd_scene load_steps=5 format=3 uid="uid://cnhj3m7w02j7t"]

[ext_resource type="PackedScene" uid="uid://dbl588lrfe2g6" path="res://scenes/ammo_pickups/ammo_pickup.tscn" id="1_monhc"]
[ext_resource type="Script" path="res://src/freeze_crystal_ammo_pickup.gd" id="2_ivu2v"]
[ext_resource type="PackedScene" uid="uid://c5mnkal840l8g" path="res://scenes/projectiles/projectile.tscn" id="3_0wmpb"]
[ext_resource type="Texture2D" uid="uid://cijnq1sjk4cjv" path="res://sprites/tiles.png" id="4_vqwd2"]

[node name="FreezeCrystalAmmoPickup" instance=ExtResource("1_monhc")]
script = ExtResource("2_ivu2v")
max_capacity = 1
is_infinite = false
projectile = ExtResource("3_0wmpb")

[node name="Sprite2D" parent="." index="0"]
texture_filter = 1
scale = Vector2(0.989, 1)
texture = ExtResource("4_vqwd2")
region_enabled = true
region_rect = Rect2(49, 25, 7, 7)

[node name="RefreshTimer" type="Timer" parent="." index="2"]
wait_time = 5.0

[connection signal="timeout" from="RefreshTimer" to="." method="on_refresh_timeout"]
